--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -57,7 +57,7 @@ block content
             span.opisi цена.электр.
           li
             div.icon.kresc.com.ua
-            a(href='http://kresc.com.ua/index.html', target='_blank') kresc.com.ua
+            a(href='http://www.kresc.com.ua/index.html', target='_blank') kresc.com.ua
             span.opisi Киров.ОЕК
           li
             div.icon.kiroe.com.ua
