--- a/includes/index.pug
+++ b/includes/index.pug
@@ -334,7 +334,7 @@ block content
             div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.filmitorrent
-            a(href='http://filmitorrent.xyz/', target='_blank') filmitorrent_TOP
+            a(href='http://filmitorrent.net/', target='_blank') filmitorrent_TOP
             div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.bible-teka.com
