--- a/includes/others.pug
+++ b/includes/others.pug
@@ -125,7 +125,7 @@ block content
             a(href='http://newtorrent.org/', target='_blank') newtorrent.org
           li
             div.icon.filmitorrent
-            a(href='http://filmitorrent.xyz/', target='_blank') filmitorrent
+            a(href='http://filmitorrent.net/', target='_blank') filmitorrent
             span.opisi ТОП фильмы
           li
             div.icon.pb.wtf
