--- a/includes/media.pug
+++ b/includes/media.pug
@@ -16,22 +16,22 @@ block content
           span.badge.badge-warning Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2019.04)
         ul
           
-          li
-            div.icon.a0download 
-            a() Скачать:
-            a(href='https://turbo.to/pzqefb54uvmh.html', target='_blank')
-              div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://turbo.to/oy2jues1xkhj.html', target='_blank')
-              div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            a(href='https://turbo.to/orjbogd03t67.html', target='_blank')
-              div.icontooinfo.a-3_cifra(title='Скачать 3-ю часть', alt='')
-            a(href='https://turbo.to/v116pgy2es6p.html', target='_blank')
-              div.icontooinfo.a-4_cifra(title='Скачать 4-ю часть', alt='')
-            a(href='https://turbo.to/sw906losh8mx.html', target='_blank')
-              div.icontooinfo.a-5_cifra(title='Скачать 5-ю часть', alt='')
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
-            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
+          //- li
+          //-   div.icon.a0download 
+          //-   a() Скачать:
+          //-   a(href='https://turbo.to/pzqefb54uvmh.html', target='_blank')
+          //-     div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
+          //-   a(href='https://turbo.to/oy2jues1xkhj.html', target='_blank')
+          //-     div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
+          //-   a(href='https://turbo.to/orjbogd03t67.html', target='_blank')
+          //-     div.icontooinfo.a-3_cifra(title='Скачать 3-ю часть', alt='')
+          //-   a(href='https://turbo.to/v116pgy2es6p.html', target='_blank')
+          //-     div.icontooinfo.a-4_cifra(title='Скачать 4-ю часть', alt='')
+          //-   a(href='https://turbo.to/sw906losh8mx.html', target='_blank')
+          //-     div.icontooinfo.a-5_cifra(title='Скачать 5-ю часть', alt='')
+          //-   div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+          //-   a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
+          //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
             // тут код плеера
@@ -84,16 +84,16 @@ block content
           span.badge.badge-warning Плеер.ТОП.УКРАИНСКАЯ (playlist.2019.06)
         ul
           
-          li
-            div.icon.a0download 
-            a() Скачать:
-            a(href='https://turbo.to/15j9ntij07n3.html', target='_blank')
-              div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://turbo.to/fbygpo6o312s.html', target='_blank')
-              div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
-            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
+          //- li
+          //-   div.icon.a0download 
+          //-   a() Скачать:
+          //-   a(href='https://turbo.to/15j9ntij07n3.html', target='_blank')
+          //-     div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
+          //-   a(href='https://turbo.to/fbygpo6o312s.html', target='_blank')
+          //-     div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
+          //-   div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+          //-   a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
+          //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
             // тут код плеера
@@ -104,7 +104,7 @@ block content
           li
             div.icon.web.telegram.org
             a() Еще музыка:  
-            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
+            a(href='https://t.me/music_hitok_ua', target='_blank') _music_HitOK_UA
             i.fainfo.fab.fa-telegram
         
       .group
@@ -153,16 +153,16 @@ block content
           span.badge.badge-warning Плеер.ТОП.РУССКАЯ (playlist.2019.06)
         ul
           
-          li
-            div.icon.a0download 
-            a() Скачать:
-            a(href='https://turbo.to/me7zzjp6a66o.html', target='_blank')
-              div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
-            a(href='https://turbo.to/7a9lxi31ntep.html', target='_blank')
-              div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
-            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
+          //- li
+          //-   div.icon.a0download 
+          //-   a() Скачать:
+          //-   a(href='https://turbo.to/me7zzjp6a66o.html', target='_blank')
+          //-     div.icontooinfo.a-1_cifra(title='Скачать 1-ю часть', alt='')
+          //-   a(href='https://turbo.to/7a9lxi31ntep.html', target='_blank')
+          //-     div.icontooinfo.a-2_cifra(title='Скачать 2-ю часть', alt='')
+          //-   div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+          //-   a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
+          //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
             // тут код плеера
@@ -173,7 +173,7 @@ block content
           li
             div.icon.web.telegram.org
             a() Еще музыка:  
-            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
+            a(href='https://t.me/music_hitok_ru', target='_blank') _music_HitOK_RU
             i.fainfo.fab.fa-telegram
 
       .group
