--- a/includes/index.pug
+++ b/includes/index.pug
@@ -365,7 +365,7 @@ block content
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п.', alt='')
           li
             div.icon.forum.zakladki
-            a(href='https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing', target='_blank') Розклад автомаршруів
+            a(href='https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing', target='_blank') Розклад автомаршрутів
             div.icontooinfo.a0repa3(title='Розклад автобусів та маршрутних авто по городу Новомиргород', alt='')
           li
             div.icon.google.maps
