updates media ukr

--- a/includes/index.pug
+++ b/includes/index.pug
@@ -407,6 +407,11 @@ block content
             span.badge.badge-danger Обновки в закладках: v.2019-09-19
         ul
           li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.укр
+            div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
+          li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://gas.ua/ua/gas/article/pobutovi-spozhivachi-mozhut-zekonomiti-do-25-na-oplati-za-gaz', target='_blank') ГАЗОВИЙ ЗАПАС
@@ -476,11 +481,6 @@ block content
             div.icon.russian.alibaba.com
             a(href='https://letyshops.com/r/alibaba-4qh7st7rrfuo0g', target='_blank') russian.alibaba.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://zakladki.github.io/media.html', target='_blank') Новые.MP3.плееры
-            div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.exmo_com
