--- a/includes/index.pug
+++ b/includes/index.pug
@@ -409,7 +409,7 @@ block content
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.укр
+            a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.UA+ZAP
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
