--- a/includes/city.pug
+++ b/includes/city.pug
@@ -91,10 +91,10 @@ block content
             a(href='http://pancheve-school.edukit.kr.ua/', target='_blank') Панчівська ЗШ
           li
             div.icon.school-1
-            a(href='http://novomyrgorod-internat.edukit.kr.ua/', target='_blank') Спец.школа інтернат інтенс.пед.корекції
+            a(href='http://novomyrgorod-internat.edukit.kr.ua/', target='_blank') Школа-інтернат І-ІІ ст. КОР
           li
             div.icon.school-1
-            a(href='http://novomyrgorod-specschool.edukit.kr.ua/', target='_blank') Спецшкола-інтернат І-ІІІ ступ.
+            a(href='http://novomyrgorod-specschool.edukit.kr.ua/', target='_blank') КЗ "Новомиргородська спеціальна школа КОР"
           li
             div.icon.school-1
             a(href='http://kapitanivka-proflyceum.edukit.kr.ua/', target='_blank') Капіт-кий проф.ліцей переробної пром.
