--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -118,7 +118,7 @@ block content
             a(href='https://letyshops.com/r/alfa-bank-ukraina-4qh7st5ct0ys4s', target='_blank') alfabank.ua`
           li
             div.icon.globalcredit.ua
-            a(href='https://letyshops.com/r/global-credit-ua-4qh7st5ct0ys4s', target='_blank') globalcredit.ua`
+            a(href='https://globalcredit.ua/', target='_blank') globalcredit.ua
           li
             div.icon.ideabank.ua
             a(href='https://letyshops.com/r/idea-bank-ua-4qh7st5ct0ys4s', target='_blank') ideabank.ua`
