--- a/includes/index.pug
+++ b/includes/index.pug
@@ -314,7 +314,7 @@ block content
             a(href='https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8', target='_blank') bonprix.ua`
           li
             div.icon.apteka24.ua
-            a(href='https://letyshops.com/r/apteka24-4qh7st5ct0cggg', target='_blank') apteka24.ua`
+            a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
       .group
         .group-title
           a(href='/others.html')
