--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -72,7 +72,7 @@ block content
             a(href='https://letyshops.com/r/aliexpress-4qh7st5csx0k4c', target='_blank') best.aliexpress.com`
           li
             div.icon.ebay.com
-            a(href='https://letyshops.com/r/ebay-4qh7st5csx6og0', target='_blank') ebay.com`
+            a(href='https://www.ebay.com/', target='_blank') ebay.com
           li
             div.icon.russian.alibaba.com
             a(href='https://letyshops.com/r/alibaba-4qh7st7rrfuo0g', target='_blank') russian.alibaba.com`
@@ -99,7 +99,7 @@ block content
             a(href='https://letyshops.com/r/stylus-4qh7st5csxogcc', target='_blank') stylus.ua`
           li
             div.icon.skidka.ua
-            a(href='http://www.skidka.ua/', target='_blank') skidka.ua
+            a(href='https://letyshops.com/r/skidka-ua-4qh7st93i7408s', target='_blank') skidka.ua`
           li
             div.icon.foxtrot.com.ua
             a(href='https://letyshops.com/r/fokstrot-ua-4qh7st5csxwko0', target='_blank') foxtrot.com.ua`
@@ -144,7 +144,7 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм.', alt='')
           li
             div.icon.kivi.ua
-            a(href='https://letyshops.com/r/kivi-ua-4qh7st7rvfggg0', target='_blank') kivi.ua`
+            a(href='https://kivi.ua/', target='_blank') kivi.ua
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Kivi (Ківі) - Smart телевізори та телебачення в Україні №1. Вибрати телевізор нового покоління KIVI. Купити Смарт тв з можливістю управління через смартфон. В телевізорах KIVI використовуються дисплеї топових конфігурацій від світових виробників. Подаруйте собі можливість насолоджуватись усіма кольорами і відтінками світу разом з KIVI', alt='')
       .group
         .group-title
@@ -208,7 +208,7 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
           li
             div.icon.dressa.com.ua
-            a(href='https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk', target='_blank') dressa.com.ua`
+            a(href='https://dressa.com.ua/', target='_blank') dressa.com.ua
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя.', alt='')
           li
             div.icon.cardo.ua
@@ -266,7 +266,7 @@ block content
             a(href='https://letyshops.com/r/yves-rocher-ua-4qh7st5csyyo0k', target='_blank') yves-rocher.ua`
           li
             div.icon.bomond.com.ua
-            a(href='https://bomond.com.ua/', target='_blank') bomond.com.ua
+            a(href='https://letyshops.com/r/bomond-4qh7st93i9ic8c', target='_blank') bomond.com.ua`
           li
             div.icon.watsons.ua
             a(href='https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo', target='_blank') watsons.ua`
@@ -279,7 +279,7 @@ block content
             a(href='https://edp.ua', target='_blank') edp.ua
           li
             div.icon.nyxcosmetic.com.ua
-            a(href='https://letyshops.com/r/nyx-professional-makeup-ua-4qh7st5cszacc4', target='_blank') nyxcosmetic.com.ua`
+            a(href='https://nyxcosmetic.com.ua/', target='_blank') nyxcosmetic.com.ua
           li
             div.icon.notino.com
             a(href='https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o', target='_blank') notino.com`
@@ -306,7 +306,7 @@ block content
             a(href='https://apteka911.com.ua', target='_blank') apteka911.com.ua
           li
             div.icon.apteka24.ua
-            a(href='https://letyshops.com/r/apteka24-4qh7st5ct0cggg', target='_blank') apteka24.ua`
+            a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
           li
             div.icon.doc.ua
             a(href='https://letyshops.com/r/doc-ua-4qh7st5ct0cggg', target='_blank') doc.ua`
@@ -338,10 +338,10 @@ block content
         ul
           li
             div.icon.yakaboo.ua
-            a(href='https://letyshops.com/r/yakaboo-4qh7st5cszy8k4', target='_blank') yakaboo.ua`
+            a(href='https://www.yakaboo.ua/', target='_blank') yakaboo.ua
           li
             div.icon.grenka.ua
-            a(href='https://grenka.ua', target='_blank') grenka.ua
+            a(href='https://letyshops.com/r/grenka-ua-4qh7st93iaskwg', target='_blank') grenka.ua`
           li
             div.icon.bambook.com
             a(href='https://letyshops.com/r/bambook-ua-4qh7st5ct06c4w', target='_blank') bambook.com`
