--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -13,6 +13,15 @@ block content
     .col-sm
       .group
         .group-title
+          span.badge.badge-warning ПОЛЕЗНОЕ
+        ul
+          li
+            div.icon.ubki.ua
+            a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
+            span.opisi Кредит ИНФО
+            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
+      .group
+        .group-title
           span.badge.badge-success Курс/Конвертер валют
         ul
           li
