--- a/includes/games.pug
+++ b/includes/games.pug
@@ -73,7 +73,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Онлайн для детей
+          span.badge.badge-success Онлайн
         ul
           li
             div.icon.poki.com
@@ -99,6 +99,10 @@ block content
           li
             div.icon.onlineguru.ru
             a(href='http://onlineguru.ru/', target='_blank') onlineguru.ru
+          li
+            div.icon.silvergames
+            a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
+            div.icontooinfo.a0repa7(title='Играть В Классные Бесплатные Онлайн Игры На Silvergames.com', alt='')
     .col-sm
       .group
         .group-title
