--- a/includes/market.pug
+++ b/includes/market.pug
@@ -89,6 +89,10 @@ block content
           li
             div.icon.rst.ua
             a(href='http://rst.ua/', target='_blank') rst.ua
+          li
+            div.icon.avto.pro
+            a(href='https://avto.pro/', target='_blank') avto.pro
+            div.icontooinfo.a0repa7(title='Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках.', alt='')
     .col-sm
       .group
         .group-title
