--- a/includes/index.pug
+++ b/includes/index.pug
@@ -212,6 +212,11 @@ block content
             span.badge.badge-dark Банкинг
         ul
           li
+            div.icon.ubki.ua
+            a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
+            span.opisi Кредит ИНФО
+            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
+          li
             div.icon.privat24.ua
             a(href='https://www.privat24.ua/', target='_blank') privat24.ua
             span.opisi Онлайн
@@ -404,90 +409,58 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2019-09-19
+            span.badge.badge-danger Обновки в закладках: v.2020-02-03
         ul
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.ubki.ua
+            a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
+            span.opisi Кредит ИНФО
+            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='http://zakladki.at.ua/forum/24-9-1', target='_blank') Как платить за газ 2020
+            div.icontooinfo.a0repa3(title='С января 2020 года украинцы начали получать платежки за газ, в которых теперь предусмотрена новая схема оплаты - отдельно за потребленный газ и абонплата за его транспортировку. ', alt='')
+          li
+            div.icon.silvergames
+            a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
+            div.icontooinfo.a0repa7(title='Играть В Классные Бесплатные Онлайн Игры На Silvergames.com', alt='')
+          li
+            div.icon.avto.pro
+            a(href='https://avto.pro/', target='_blank') avto.pro
+            div.icontooinfo.a0repa7(title='Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках.', alt='')
+          li
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.UA+ZAP
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://gas.ua/ua/gas/article/pobutovi-spozhivachi-mozhut-zekonomiti-do-25-na-oplati-za-gaz', target='_blank') ГАЗОВИЙ ЗАПАС
-            div.icontooinfo.a0repa3(title='ГАЗОВИЙ ЗАПАС - ПЛАТІТЬ ЗА ГАЗ ДО 25% МЕНШЕ. Побутові споживачі можуть зекономити до 25% на оплаті за газ', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.notino.com
             a(href='https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o', target='_blank') notino.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві.', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.krauff.com
             a(href='https://letyshops.com/r/krauff-ua-4qh7st7rujcwss', target='_blank') krauff.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества.', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.prego.ua
             a(href='https://letyshops.com/r/prego-ua-4qh7st7rum0www', target='_blank') prego.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.ager.ua
             a(href='https://letyshops.com/r/ager-ua-4qh7st7rur6s0o', target='_blank') ager.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день.', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.sneakerstudio.com.ua
             a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c', target='_blank') sneakerstudio.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.puccini.ua
-            a(href='https://letyshops.com/r/puccini-ua-4qh7st7rv9ycgw', target='_blank') puccini.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.honestgoods.com.ua
-            a(href='https://letyshops.com/r/honestgoods-ua-4qh7st7rvbeoos', target='_blank') honestgoods.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Подгузники, памперсы, детское питание, детские книги. Интернет магазин детских товаров в Украине. Купить подгузники и детское питание с доставкой - Honest Goods﻿', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.lekos.com.ua
-            a(href='https://letyshops.com/r/lekos-ua-4qh7st7rvd6o88', target='_blank') lekos.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить наручные часы в Украине в Интернет-магазине наручных часов LEKOS', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.originalam.net
-            a(href='https://letyshops.com/r/originalam-4qh7st7rveecco', target='_blank') originalam.net`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.cardo.ua
-            a(href='https://letyshops.com/r/cardo-4qh7st7rrpuso8', target='_blank') cardo.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.citrus.ua
-            a(href='https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo', target='_blank') citrus.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.russian.alibaba.com
-            a(href='https://letyshops.com/r/alibaba-4qh7st7rrfuo0g', target='_blank') russian.alibaba.com`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары.', alt='')
-          li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.exmo_com
             a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
             div.icontooinfo.a0repa3(title='Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ', alt='')
           li
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
           li
-            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.costaction.com
             a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Хранилище файлов`
             div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
