--- a/includes/index.pug
+++ b/includes/index.pug
@@ -153,6 +153,9 @@ block content
             span.badge.badge-dark Игры/Букмек.конторы
         ul
           li
+            div.icon.parimatch.com
+            a(href='https://classic.parimatch.com/', target='_blank') classic.parimatch.com`
+          li
             div.icon.fan-sport.com.ua
             a(href='https://fan-sport.com.ua?bf=5c6990af5f28e_515561215', target='_blank') fan-sport.com.ua`
           li
