--- a/includes/index.pug
+++ b/includes/index.pug
@@ -77,9 +77,6 @@ block content
             div.icon.unian.net
             a(href='https://www.unian.net/', target='_blank') Unian.net
           li
-            div.icon.sis.at.ua
-            a(href='http://sis.at.ua/', target='_blank') Нужные ШТУЧКИ!
-          li
             div.icon.myscore.com.ua
             a(href='https://www.myscore.com.ua/', target='_blank') myscore.com.ua
           li
@@ -215,11 +212,6 @@ block content
             span.badge.badge-dark Банкинг
         ul
           li
-            div.icon.ubki.ua
-            a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
-            span.opisi Кредит ИНФО
-            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
-          li
             div.icon.privat24.ua
             a(href='https://www.privat24.ua/', target='_blank') privat24.ua
             span.opisi Онлайн
@@ -243,10 +235,6 @@ block content
             div.icon.minfin.com.ua
             a(href='https://minfin.com.ua/currency/', target='_blank') minfin.com.ua
             span.opisi Курс валют
-          li
-            div.icon.kurs.com.ua
-            a(href='https://kurs.com.ua/', target='_blank') kurs
-            span.opisi Курс/конверт валют
           li
             div.icon.bestchange.ru
             a(href='https://www.bestchange.ru/', target='_blank') bestchange.ru
@@ -303,26 +291,33 @@ block content
             a(href='https://smarty.sale/1197327', target='_blank') Smarty.sale`
             span.opisi Умные покупки
           li
+            div.icon.best.aliexpress.com
+            a(href='https://letyshops.com/r/aliexpress-4qh7st9dci04g0', target='_blank') best.aliexpress.com`
+          li
             div.icon.rozetka.com.ua
-            a(href='https://letyshops.com/r/rozetka-4qh7st5csxa88w', target='_blank') rozetka.com.ua`
+            a(href='https://letyshops.com/r/rozetka-4qh7st9dciskgw', target='_blank') rozetka.com.ua`
           li
             div.icon.stylus.ua
-            a(href='https://letyshops.com/r/stylus-4qh7st5csxogcc', target='_blank') stylus.ua`
+            a(href='https://letyshops.com/r/stylus-4qh7st9dcjok8o', target='_blank') stylus.ua`
           li
             div.icon.eldorado.ua
-            a(href='https://letyshops.com/r/eldorado-ua-4qh7st5csxicso', target='_blank') eldorado.ua`
+            a(href='https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk', target='_blank') eldorado.ua`
           li
             div.icon.moyo.ua
-            a(href='https://letyshops.com/r/moyo-ua-4qh7st5csxogcc', target='_blank') moyo.ua`
+            a(href='https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8', target='_blank') moyo.ua`
           li
             div.icon.xiaomi.ua
-            a(href='https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o', target='_blank') xiaomi.ua`
+            a(href='https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o', target='_blank') xiaomi.ua`
           li
             div.icon.bonprix.ua
-            a(href='https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8', target='_blank') bonprix.ua`
+            a(href='https://letyshops.com/r/bonprix-ua-4qh7st9ddo6cs0', target='_blank') bonprix.ua`
           li
-            div.icon.apteka24.ua
-            a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
+            div.icon.med-magazin.ua
+            a(href='https://letyshops.com/r/med-magazin-ua-4qh7st9ddu2oog', target='_blank') med-magazin.ua`
+            div.icontooinfo.a0repa3(title='Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
+          li
+            div.icon.apteka911.com.ua
+            a(href='https://apteka911.com.ua', target='_blank') apteka911.com.ua
       .group
         .group-title
           a(href='/others.html')
@@ -437,23 +432,23 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
           li
             div.icon.notino.com
-            a(href='https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o', target='_blank') notino.com`
+            a(href='https://letyshops.com/r/notino-ua-4qh7st9ddssg0c', target='_blank') notino.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві.', alt='')
           li
             div.icon.krauff.com
-            a(href='https://letyshops.com/r/krauff-ua-4qh7st7rujcwss', target='_blank') krauff.com`
+            a(href='https://letyshops.com/r/krauff-ua-4qh7st9dcqask8', target='_blank') krauff.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества.', alt='')
           li
             div.icon.prego.ua
-            a(href='https://letyshops.com/r/prego-ua-4qh7st7rum0www', target='_blank') prego.ua`
+            a(href='https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4', target='_blank') prego.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
           li
             div.icon.ager.ua
-            a(href='https://letyshops.com/r/ager-ua-4qh7st7rur6s0o', target='_blank') ager.ua`
+            a(href='https://letyshops.com/r/ager-ua-4qh7st9ddpq8ss', target='_blank') ager.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день.', alt='')
           li
             div.icon.sneakerstudio.com.ua
-            a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c', target='_blank') sneakerstudio.com.ua`
+            a(href='https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8', target='_blank') sneakerstudio.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов', alt='')
           li
             div.icon.exmo_com
