--- a/includes/index.pug
+++ b/includes/index.pug
@@ -364,7 +364,7 @@ block content
         ul        
           li
             div.icon.forum.zakladki
-            a(href='http://zakladki.at.ua/forum/25-6-1#7', target='_blank') НАША КОМУНАЛКА
+            a(href='https://drive.google.com/open?id=1vQHnYGF3VZda2UW38R4xG-pVTk3ggB1FuOoUTpKKCfk', target='_blank') НАША КОМУНАЛКА
             div.icontooinfo.a0repa3(title='Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п.', alt='')
           li
             div.icon.forum.zakladki
