--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -124,7 +124,7 @@ block content
         ul
           li
             div.icon.alfabank.ua
-            a(href='https://letyshops.com/r/alfa-bank-ukraina-4qh7st9ddx4w48', target='_blank') alfabank.ua`
+            a(href='https://alfabank.ua/', target='_blank') alfabank.ua
           li
             div.icon.ideabank.ua
             a(href='https://letyshops.com/r/idea-bank-ua-4qh7st9ddx8go0', target='_blank') ideabank.ua`
