--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -217,7 +217,7 @@ block content
             a(href='https://letyshops.com/r/asos-4qh7st9ddou800', target='_blank') asos.com`
           li
             div.icon.maximoda.com.ua
-            a(href='https://letyshops.com/r/maximoda-ua-4qh7st9ddp2cks', target='_blank') maximoda.com.ua`
+            a(href='https://maximoda.com.ua/', target='_blank') maximoda.com.ua
             div.icontooinfo.a0repa3(title='MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
           li
             div.icon.dressa.com.ua
@@ -269,7 +269,7 @@ block content
             a(href='https://letyshops.com/r/budinok-igrashok-4qh7st9ddrc4sk', target='_blank') bi.ua`
           li
             div.icon.berni.com.ua
-            a(href='https://letyshops.com/r/berni-4qh7st9ddrc4sg', target='_blank') berni.com.ua`
+            a(href='http://berni.com.ua/', target='_blank') berni.com.ua
           li
             div.icon.honestgoods.com.ua
             a(href='https://letyshops.com/r/honestgoods-ua-4qh7st9ddrms44', target='_blank') honestgoods.com.ua`
