--- a/includes/index.pug
+++ b/includes/index.pug
@@ -407,8 +407,16 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2020-02-03
+            span.badge.badge-danger Обновки в закладках: v.2020-03-05
         ul
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&usp=sharing', target='_blank') Карта коронавируса UA
+            div.icontooinfo.a0repa3(title='Карта Украины с позначками где были зафиксированные случаи', alt='')
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&usp=sharing', target='_blank') Карта коронавируса MIR
+            div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
           li
             div.icon.ubki.ua
             a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
