--- a/includes/index.pug
+++ b/includes/index.pug
@@ -415,7 +415,7 @@ block content
             div.icontooinfo.a0repa3(title='Карта Украины с позначками где были зафиксированные случаи', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&usp=sharing', target='_blank') Карта коронавируса MIR
+            a(href='https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html?fbclid=IwAR0p969bUhyvZpETpmPgrAP_oFhlp1-p9PmWUFa9GDUSg6-8GcRFrbBVJOQ#/bda7594740fd40299423467b48e9ecf6', target='_blank') Карта коронавируса MIR
             div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
           li
             div.icon.ubki.ua
