--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -149,6 +149,33 @@ block content
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
       .group
         .group-title
+          span.badge.badge-warning Антивирусники
+        ul
+          li
+            div.icon.prog.tnod32.info
+            a(href='https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr', target='_blank') NOD32 8.0.319.1 RePack
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0repa3(title='Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++', alt='')
+          li
+            div.icon.
+            a(href='', target='_blank') Avast (онлайн установщик)
+            div.icontooinfo.a0repa3(title='опись', alt='')
+          li
+            div.icon.
+            a(href='', target='_blank') назва
+            div.icontooinfo.a0repa3(title='опись', alt='')
+          li
+            div.icon.
+            a(href='', target='_blank') назва
+            div.icontooinfo.a0repa3(title='опись', alt='')
+          li
+            div.icon.
+            a(href='', target='_blank') назва
+            div.icontooinfo.a0repa3(title='опись', alt='')
+              
+              
+      .group
+        .group-title
           span.badge.badge-warning Для N.O.D.32 продление лицензии
         ul
           li
