--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -153,27 +153,25 @@ block content
         ul
           li
             div.icon.prog.tnod32.info
-            a(href='https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr', target='_blank') NOD32 8.0.319.1 RePack
+            a(href='https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr', target='_blank') NOD32_8.0.319.1_RePack
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
             div.icontooinfo.a0repa3(title='Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++', alt='')
           li
-            div.icon.
-            a(href='', target='_blank') Avast (онлайн установщик)
-            div.icontooinfo.a0repa3(title='опись', alt='')
+            div.icon.prog_Avast
+            a(href='https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK', target='_blank') Avast (онлайн установщик)
+            div.icontooinfo.a0repa3(title='Антивирус', alt='')
           li
-            div.icon.
-            a(href='', target='_blank') назва
-            div.icontooinfo.a0repa3(title='опись', alt='')
+            div.icon.prog_Avira
+            a(href='https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD', target='_blank') Avira (онлайн установщик)
+            div.icontooinfo.a0repa3(title='Антивирус', alt='')
           li
-            div.icon.
-            a(href='', target='_blank') назва
-            div.icontooinfo.a0repa3(title='опись', alt='')
+            div.icon.prog_360TS
+            a(href='https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC', target='_blank') 360TS (онлайн установщик)
+            div.icontooinfo.a0repa3(title='Антивирус', alt='')
           li
-            div.icon.
-            a(href='', target='_blank') назва
-            div.icontooinfo.a0repa3(title='опись', alt='')
-              
-              
+            div.icon.prog_DrWeb
+            a(href='https://drive.google.com/open?id=1HGiSm0B7IovrJi8s7RN_36MpL36U81W0', target='_blank') Dr.Web_CureIt
+            div.icontooinfo.a0repa3(title='Одноразовая/портативная утилита для проверки ПК', alt='')
       .group
         .group-title
           span.badge.badge-warning Для N.O.D.32 продление лицензии
