--- a/includes/index.pug
+++ b/includes/index.pug
@@ -411,7 +411,7 @@ block content
         ul
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&usp=sharing', target='_blank') Карта коронавируса UA
+            a(href='https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0', target='_blank') Карта коронавируса UA
             div.icontooinfo.a0repa3(title='Карта Украины с позначками где были зафиксированные случаи', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
