--- a/includes/index.pug
+++ b/includes/index.pug
@@ -295,7 +295,7 @@ block content
             a(href='https://letyshops.com/r/aliexpress-4qh7st9dci04g0', target='_blank') best.aliexpress.com`
           li
             div.icon.rozetka.com.ua
-            a(href='https://letyshops.com/r/rozetka-4qh7st9dciskgw', target='_blank') rozetka.com.ua`
+            a(href='https://rozetka.com.ua/', target='_blank') rozetka.com.ua
           li
             div.icon.stylus.ua
             a(href='https://letyshops.com/r/stylus-4qh7st9dcjok8o', target='_blank') stylus.ua`
