--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -84,7 +84,7 @@ block content
         ul
           li
             div.icon.rozetka.com.ua
-            a(href='https://letyshops.com/r/rozetka-4qh7st9dciskgw', target='_blank') rozetka.com.ua`
+            a(href='https://rozetka.com.ua/', target='_blank') rozetka.com.ua
           li
             div.icon.allo.ua
             a(href='https://allo.ua', target='_blank') allo.ua
