--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -229,7 +229,7 @@ block content
             div.icontooinfo.a0repa3(title='Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине.', alt='')
           li
             div.icon.prego.ua
-            a(href='https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4', target='_blank') prego.ua`
+            a(href='https://prego.ua', target='_blank') prego.ua
             div.icontooinfo.a0repa3(title='Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине', alt='')
           li
             div.icon.ager.ua
