--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -88,7 +88,7 @@ html(lang="ru")
                 i.fab.fa-skype.fa-lg(aria-hidden='true')
               a(href='mailto:weber515sis@gmail.com', target='_blank', title='E-mail: weber515sis@gmail.com')
                 i.far.fa-envelope.fa-lg(aria-hidden='true')
-              a(href='https://t.me/joinchat/H_Y66VFScFxfUigt5lgS1Q', target='_blank', title='Telegram: ЧАТ в ТЕЛЕГРАМ')
+              a(href='https://t.me/zakladki_top', target='_blank', title='Telegram: ЧАТ в ТЕЛЕГРАМ')
                 i.fab.fa-telegram.fa-lg(aria-hidden='true')
               a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Видеоинструкция: автозапуск ZAKLADOK')
                 i.fas.fa-medkit.fa-lg.coloriconfuter(aria-hidden='true')
