--- a/includes/city.pug
+++ b/includes/city.pug
@@ -92,12 +92,15 @@ block content
           li
             div.icon.school-1
             a(href='http://novomyrgorod-internat.edukit.kr.ua/', target='_blank') Школа-інтернат І-ІІ ст. КОР
+            div.icontooinfo.a0repa3(title='Новомиргородська спеціальна загальноосвітня школа-інтернат І-ІІ ступенів Кіровоградської обласної ради', alt='')
           li
             div.icon.school-1
-            a(href='http://novomyrgorod-specschool.edukit.kr.ua/', target='_blank') КЗ "Новомиргородська спеціальна школа КОР"
+            a(href='http://novomyrgorod-specschool.edukit.kr.ua/', target='_blank') КЗ "Новом-ка спец. школа КОР"
+            div.icontooinfo.a0repa3(title='КОМУНАЛЬНИЙ ЗАКЛАД "НОВОМИРГОРОДСЬКА СПЕЦІАЛЬНА ШКОЛА КІРОВОГРАДСЬКОЇ ОБЛАСНОЇ РАДИ"', alt='')
           li
             div.icon.school-1
-            a(href='http://kapitanivka-proflyceum.edukit.kr.ua/', target='_blank') Капіт-кий проф.ліцей переробної пром.
+            a(href='http://kapitanivka-proflyceum.edukit.kr.ua/', target='_blank') Капіт-кий проф.ліцей
+            div.icontooinfo.a0repa3(title='Капітанівський професійний ліцей переробної промисловості', alt='')
     .col-sm
       .group
         .group-title
