--- a/includes/index.pug
+++ b/includes/index.pug
@@ -177,7 +177,7 @@ block content
             span.opisi оф.цена.электр.
           li
             div.icon.kresc.com.ua
-            a(href='http://www.kresc.com.ua/payment.html', target='_blank') kresc.com.ua
+            a(href='http://www.kresc.com.ua/', target='_blank') kresc.com.ua
             span.opisi Електро.ОЕК
           li
             div.icon.ukrtelecom.ua
