--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -57,12 +57,20 @@ block content
             span.opisi цена.электр.
           li
             div.icon.kresc.com.ua
-            a(href='http://www.kresc.com.ua/index.html', target='_blank') kresc.com.ua
-            span.opisi Киров.ОЕК
+            a(href='https://www.kresc.com.ua/', target='_blank') kresc.com.ua
+            span.opisi КОЕК
+            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
+            div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
+            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.kiroe.com.ua
             a(href='http://kiroe.com.ua/', target='_blank') kiroe.com
-            span.opisi Кабин.обленерго.стар
+            span.opisi Кір-д.обленерго
       .group
         .group-title
           span.badge.badge-success Вода
