--- a/includes/index.pug
+++ b/includes/index.pug
@@ -177,8 +177,10 @@ block content
             span.opisi оф.цена.электр.
           li
             div.icon.kresc.com.ua
-            a(href='http://www.kresc.com.ua/', target='_blank') kresc.com.ua
-            span.opisi Електро.ОЕК
+            a(href='https://www.kresc.com.ua/', target='_blank') kresc.com.ua
+            span.opisi КОЕК
+            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.ukrtelecom.ua
             a(href='https://new.ukrtelecom.ua/payment/#generate-bill', target='_blank') ukrtelecom
@@ -403,8 +405,14 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обновки в закладках: v.2020-03-05
+            span.badge.badge-danger Обновки в закладках: v.2020-05-30
         ul
+          li
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
+            div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
+            a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0', target='_blank') Карта коронавируса UA
